force-app/main/default/objects/Course_Enrollment__c/Course_Enrollment__c.object-meta.xml
<CustomObject>
    <label>Course Enrollment</label>
    <nameField>
        <label>Course Enrollment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Enrollments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>