force-app/main/default/objects/Course_Enrollment__c/fields/Active_Insider_Member__c.field-meta.xml
<CustomField>
    <fullName>Active_Insider_Member__c</fullName>
    <formula
  >IF(OR(CONTAINS(Course_Account__r.Insider_Stage__c,&quot;Not Started&quot;),CONTAINS(Course_Account__r.Insider_Stage__c,&quot;Active&quot;)), 

    True, 

    False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Insider Member</label>
    <type>Checkbox</type>
</CustomField>