force-app/main/default/objects/Course_Enrollment__c/fields/Comp_Seats__c.field-meta.xml
<CustomField>
    <fullName>Comp_Seats__c</fullName>
    <label>Comp Seats</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>