force-app/main/default/objects/Course_Enrollment__c/fields/Comp_Seats_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Comp_Seats_Inactive__c</fullName>
    <label>Comp Seats (Inactive)</label>
    <summaryFilterItems>
        <field>Contact_Enrollment__c.Active_Formula__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Contact_Enrollment__c.Learner_Type__c</field>
        <operation>equals</operation>
        <value>Comp</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Contact_Enrollment__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Unenrolled</value>
    </summaryFilterItems>
    <summaryForeignKey
  >Contact_Enrollment__c.Course_Enrollment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>