force-app/main/default/objects/Course_Enrollment__c/fields/Course_Access__c.field-meta.xml
<CustomField>
    <fullName>Course_Access__c</fullName>
    <formula>TEXT(Course__r.Course_Access__c)</formula>
    <label>Course Access</label>
    <type>Text</type>
</CustomField>