force-app/main/default/objects/Course_Enrollment__c/fields/Course_Account__c.field-meta.xml
<CustomField>
    <fullName>Course_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Course Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Course Enrollments</relationshipLabel>
    <relationshipName>Course_Enrollments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>