force-app/main/default/objects/Course_Enrollment__c/fields/Course_Account_Mismatch__c.field-meta.xml
<CustomField>
    <fullName>Course_Account_Mismatch__c</fullName>
    <description
  >Marked true if the Course Enrollment Name does not contain the Course Account Name.</description>
    <formula>NOT(CONTAINS(Name,  Course_Account_Name__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Account Mismatch</label>
    <type>Checkbox</type>
</CustomField>