force-app/main/default/objects/Course_Enrollment__c/fields/Course_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Account_Name__c</fullName>
    <formula>Course_Account__r.Name</formula>
    <label>Course Account Name</label>
    <type>Text</type>
</CustomField>