force-app/main/default/objects/Course_Enrollment__c/fields/Course_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Course_Account_Owner__c</fullName>
    <formula>Course_Account__r.Account_Owner_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Account Owner</label>
    <type>Text</type>
</CustomField>