force-app/main/default/objects/Course_Enrollment__c/fields/Course_Account_Sales_Team__c.field-meta.xml
<CustomField>
    <fullName>Course_Account_Sales_Team__c</fullName>
    <formula>Course_Account__r.Sales_Team_Formula__c</formula>
    <label>Course Account Sales Team</label>
    <type>Text</type>
</CustomField>