force-app/main/default/objects/Course_Enrollment__c/fields/Course_Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>Course_Enrollment_Date__c</fullName>
    <inlineHelpText
  >The date the Account was enrolled for the course.</inlineHelpText>
    <label>Course Activation Date</label>
    <type>Date</type>
</CustomField>