force-app/main/default/objects/Course_Enrollment__c/fields/Course_Nickname__c.field-meta.xml
<CustomField>
    <fullName>Course_Nickname__c</fullName>
    <formula>Course__r.Course_Nickname__c</formula>
    <label>Course Nickname</label>
    <type>Text</type>
</CustomField>