force-app/main/default/objects/Course_Enrollment__c/fields/Delivery_Contract__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Contract__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Delivery Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Course Enrollments</relationshipLabel>
    <relationshipName>Course_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>