force-app/main/default/objects/Course_Enrollment__c/fields/Delivery_Contract_Special_Terms__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Contract_Special_Terms__c</fullName>
    <formula>Delivery_Contract__r.SpecialTerms</formula>
    <label>Delivery Contract Special Terms</label>
    <type>Text</type>
</CustomField>