force-app/main/default/objects/Course_Enrollment__c/fields/Enrollment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Notes__c</fullName>
    <inlineHelpText
  >Notes related to the activation of the course.</inlineHelpText>
    <label>Course Activation Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>