force-app/main/default/objects/Course_Enrollment__c/fields/External_LMS_Seats__c.field-meta.xml
<CustomField>
    <fullName>External_LMS_Seats__c</fullName>
    <label>External LMS Seats</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>