force-app/main/default/objects/Course_Enrollment__c/fields/Membership_Activity__c.field-meta.xml
<CustomField>
    <fullName>Membership_Activity__c</fullName>
    <formula
  >HYPERLINK(&quot;https://erepublic.lightning.force.com/lightning/r/Report/00OJw000002rkQAMAY/view?fv0=&quot;&amp;Membership_Contract__r.Membership_Name__r.Id, &quot;All Time&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership Activity</label>
    <type>Text</type>
</CustomField>