force-app/main/default/objects/Course_Enrollment__c/fields/Membership_Contract__c.field-meta.xml
<CustomField>
    <fullName>Membership_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membership Contract</label>
    <referenceTo>Membership_Contract__c</referenceTo>
    <relationshipLabel>Course Enrollments</relationshipLabel>
    <relationshipName>Course_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>