force-app/main/default/objects/Course_Enrollment__c/fields/MER_Submitted_Contacts__c.field-meta.xml
<CustomField>
    <fullName>MER_Submitted_Contacts__c</fullName>
    <description
  >Number of contacts submitted using the &apos;Submit Contact Enrollments&apos; button on the related Membership Contract.</description>
    <inlineHelpText
  >Number of contacts submitted using the &apos;Submit Contact Enrollments&apos; button on the related Membership Contract.</inlineHelpText>
    <label>MER Submitted Contact(s)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>