force-app/main/default/objects/Course_Enrollment__c/fields/Premium_Seats__c.field-meta.xml
<CustomField>
    <fullName>Premium_Seats__c</fullName>
    <label>Premium Seats</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>