force-app/main/default/objects/Course_Enrollment__c/fields/Premium_Seats_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Premium_Seats_Enrolled__c</fullName>
    <label>Premium Seats (Active)</label>
    <summaryFilterItems>
        <field>Contact_Enrollment__c.Learner_Type__c</field>
        <operation>equals</operation>
        <value>Premium Seat</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Contact_Enrollment__c.Active_Formula__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey
  >Contact_Enrollment__c.Course_Enrollment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>