force-app/main/default/objects/Course_Enrollment__c/fields/Purchased_Seats__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Seats__c</fullName>
    <label>Purchased Seats</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>