force-app/main/default/objects/Course_Enrollment__c/fields/Purchased_Seats_Complete__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Seats_Complete__c</fullName>
    <label>Purchased Seats (Complete)</label>
    <summaryFilterItems>
        <field>Contact_Enrollment__c.Complete__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Contact_Enrollment__c.Learner_Type__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </summaryFilterItems>
    <summaryForeignKey
  >Contact_Enrollment__c.Course_Enrollment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>