force-app/main/default/objects/Course_Enrollment__c/fields/Total_Seats__c.field-meta.xml
<CustomField>
    <fullName>Total_Seats__c</fullName>
    <formula>Comp_Seats__c  +  Trial_Seats__c  +  Purchased_Seats__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>