force-app/main/default/objects/Course_Enrollment__c/fields/Total_Seats_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Total_Seats_Enrolled__c</fullName>
    <inlineHelpText
  >Enrollments are considered Active when their Status is not Completed, Deactivated or Unenrolled.</inlineHelpText>
    <label>Total Seats (Active)</label>
    <summaryFilterItems>
        <field>Contact_Enrollment__c.Active_Formula__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey
  >Contact_Enrollment__c.Course_Enrollment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>