force-app/main/default/objects/Course_Enrollment__c/fields/Total_Seats_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Total_Seats_Inactive__c</fullName>
    <inlineHelpText
  >Enrollments are considered Inactive when their Status is Complete, Deactivated or Unenrolled.</inlineHelpText>
    <label>Total Seats (Inactive)</label>
    <summaryFilterItems>
        <field>Contact_Enrollment__c.Active_Formula__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Contact_Enrollment__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Unenrolled</value>
    </summaryFilterItems>
    <summaryForeignKey
  >Contact_Enrollment__c.Course_Enrollment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>