force-app/main/default/objects/Course_Enrollment__c/fields/Trial_Seats__c.field-meta.xml
<CustomField>
    <fullName>Trial_Seats__c</fullName>
    <label>Trial Seats</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>