force-app/main/default/objects/Course_Enrollment__c/fields/Unused_Premium_Seats__c.field-meta.xml
<CustomField>
    <fullName>Unused_Premium_Seats__c</fullName>
    <formula
  >Premium_Seats__c -  Premium_Seats_Enrolled__c -  Premium_Seats_Inactive__c</formula>
    <label>Unused Premium Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>