force-app/main/default/objects/Course_Enrollment__c/fields/Unused_Purchased_Seats__c.field-meta.xml
<CustomField>
    <fullName>Unused_Purchased_Seats__c</fullName>
    <formula
  >Purchased_Seats__c  - Purchased_Seats_Enrolled__c -  Purchased_Seats_Inactive__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unused Purchased Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>