force-app/main/default/objects/Course_Enrollment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Course_Account__c</columns>
    <columns>Course_Enrollment_Date__c</columns>
    <columns>Standardized_Course_Name__c</columns>
    <columns>Purchased_Seats__c</columns>
    <columns>Unused_Purchased_Seats__c</columns>
    <columns>Premium_Seats_Enrolled__c</columns>
    <columns>Comp_Seats_Enrolled__c</columns>
    <columns>Trial_Seats_Enrolled__c</columns>
    <columns>Total_Seats_Enrolled__c</columns>
    <columns>Membership_Contract__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>